--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-/* src/styles.css */
-
 .custom-container {
   background-color: white;
   border-radius: 10px;
@@ -11,10 +9,6 @@
   color: white;
 }
 
-/* Add your custom CSS styles here */
-/* Example: */
-
-/* Center content in the middle of the screen */
 body {
   display: flex;
   justify-content: center;
@@ -24,17 +18,14 @@ body {
   background-color: #f2f2f2;
 }
 
-/* Style the form inputs */
 .form-group {
   margin-bottom: 15px;
 }
 
-/* Make the Navbar responsive */
 .navbar {
-  border-bottom: 3px solid #007bff; /* Add a border at the bottom */
+  border-bottom: 3px solid #007bff; 
 }
 
-/* Style the buttons */
 .button {
   background-color: #007bff;
   color: white;
